--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Neuseelandreise</h1>
     <h2>Queenstown</h2>
+    <p>Queenstown ist eine Stadt im Queenstown-Lakes District der Region Otago auf der Südinsel von Neuseeland. Die Stadt ist Verwaltungssitz des Distrikts.Queenstown befindet sich 173 km nordwestlich von Dunedin und rund 42 km westlich von Cromwell am mittleren Abschnittes des Lake Wakatipu und an den östlichen Ausläufern der Neuseeländischen Alpen. Nordwestlich der Stadt erheben sich die bis zu 2300 m hohen Richardson Mountains und östlich The Remarkables.Mit der Gondelbahn (Skyline Gondola) gelangt man zu einer Bergstation auf dem Bob’s Peak, von wo aus man einen guten Blick über Queenstown und den Lake Wakatipu hat. Den See kann man am besten mit dem alten Dampfer MSS Earnslaw erkunden, mit regulären Fahrten zur Walter Peak High Country Farm.</p>
 </body>
 </html>
