Bild der Attraktion verwendet

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         besten mit dem alten Dampfer MSS Earnslaw erkunden, mit regulären Fahrten zur Walter Peak High Country Farm.
         (Quelle: <a href="https://de.wikipedia.org/wiki/Queenstown_(Neuseeland)">Wikipedia</a> )
     </p>
+
+<figure>
+    <img src="images/attraction.jpg" alt="Blick über Queenstown und den Wakatipu See">
+</figure>
+
 </body>
 
 </html>
