--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <figure>
     <img src="images/attraction.jpg" alt="Blick über Queenstown und den Wakatipu See">
+    <figcaption>Blick über Queenstown und den Wakatipu See</figcaption>
 </figure>
 
 </body>
