--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <figure>
     <img src="images/attraction.jpg" alt="Blick über Queenstown und den Wakatipu See">
-    <figcaption>Blick über Queenstown und den Wakatipu See (Quelle: <a href="https://pixabay.com/de/photos/lake-wakatipu-queenstown-bobs-peak-2143146/">Barni1@pixabay</a></figcaption>
+    <figcaption>Blick über Queenstown und den Wakatipu See (Quelle: <a href="https://pixabay.com/de/photos/lake-wakatipu-queenstown-bobs-peak-2143146/">Barni1@pixabay</a>)</figcaption>
 </figure>
 
 </body>
